--- a/assets/less/front-page/mobile.less
+++ b/assets/less/front-page/mobile.less
@@ -9,10 +9,7 @@
       border: 0;
       display: flex;
       overflow: hidden;
-      >.page__wrap {
-        width: 100%;
-        padding: 0;
-      }
+      
       .page-slideshow__inner {
         padding: 0;
       }
@@ -24,8 +21,10 @@
       }
     }
     .one_column {
-      .page__wrap {
+      .inner {
           max-width: @container-desktop;
+          display: flex;
+          margin: 0 auto;
       }
     }
     .fp__callout {
