--- a/assets/less/page/mobile.less
+++ b/assets/less/page/mobile.less
@@ -8,10 +8,16 @@
         }
     }
 }
+.page__wrap {
+    
+}
 
 .page__builder {
     .page__builder__container {
         padding: 30px 0px;
+        > .inner {
+        display: flex;
+    }
     }
     h1,
     h2,
